# mkgui

./: .gitignore  PLAN.md  README.md  STATUS.md  pyproject.toml
examples/sample_project/: all_exports.py  cli_tool.py  database.py  edge_cases.py  script_runner.py
src/mkgui/: __init__.py  analyzer.py  cli.py  generator.py  inspector.py  models.py
src/mkgui_runtime/: __init__.py  app.py  child.py  protocol.py  runner.py
src/mkgui_runtime/ui/: __init__.py  main_window.py  process_runner.py
src/mkgui_runtime/ui/widgets/: __init__.py  function_form.py  output_console.py  preflight_panel.py  run_history.py
src/py2gui/: __init__.py  cli.py  generator.py
src/pyqt6_gen/: analyzer.py  cli.py  generator.py  inspector.py  models.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_generator.py  test_hypothesis.py  test_inspector.py  test_models.py  test_runtime_child.py  test_runtime_runner.py  test_snapshots.py
tests/__snapshots__/: test_snapshots.ambr
